@@ -1,14 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST vpim-0.695.gem 103936 RMD160 1b9d71ab6262d2d0750065769da00099aa8d2dcc SHA1 6efe1605f9192ccc636a8d614a56cdbb335eec7c SHA256 afe5e929fc9d1e373d59b73868e2b781e34a8b789dd62ececdafe77a2beedc38
-EBUILD vpim-0.695-r1.ebuild 555 RMD160 fade3e77a5f3da0742eb98936251c18552a9966d SHA1 4d667b1bad6ee44811815f6fb06d929d70d756d1 SHA256 5db53bcbdfb7b401e78ed0319c5a73f9e7e683572c6186a8f2fa2f423e5d3af8
-MISC ChangeLog 495 RMD160 3dce62a2bbf07ec65ddc26eddd3626ff4f75e1a7 SHA1 3db1ee959d08126e529463615875269678ff4bff SHA256 202df5fd510f02cfa31bd87e9c38b3a3bdbf3c9150ad6c0f1b7001b6576ec9fc
-MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
+DIST vpim-0.695.gem 103936 SHA256 afe5e929fc9d1e373d59b73868e2b781e34a8b789dd62ececdafe77a2beedc38 SHA512 18e447a2935a46a47ca3ec9789560589ce08e026aab7575d74f42c05e24c611a11d7f43145e53d221e2c38d7666d593a14ffbfbf34cab2bfd07659745c06d1cf WHIRLPOOL 79ab6050a5b2e82c17797c1add371c8b9300b0e380d8fa8920f8fef21abd0573640e04fe25356e9c856cf3f7e6602ca2041599205baf42ad40a08f13ca6d4ab0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAkyA3mEACgkQZihJkut28StKpgEAgz/TvWk6DuZN0KrDbqOxCBi3
-c+x/7202g8f7qcKo2psBAJVPTOktdlUJnGIqNiXaTG1B5LDN5NGmawr88QIoKH/t
-=FONO
+iF4EAREIAAYFAlBW1sEACgkQiIP6VqMIqNdLWwD/erdNyCYmzryHpBW7sy5Yt6tX
+J9pbUa92T7bMsDAKkYIA/R0tLVxohhTzuvShAljXu3039OEuz/jOhuCUWUy3TuUi
+=6qpN
 -----END PGP SIGNATURE-----
